# SmartCalc_v1.0

./: README.md
src/: Makefile  tests.c
src/smart_calc_v1/: CMakeLists.txt  main.cpp  pictures.qrc
src/smart_calc_v1/back/: s21_calc.c  s21_calc.h  s21_callback.c  s21_parser.c  s21_polish.c  s21_stack.c
src/smart_calc_v1/front/: s21_calculator.cpp  s21_calculator.h
